SIMRatingDataImport/antlr-runtime/com/mmpnc/rating/iso/algorithm/dataimport/isoalgorithmimportParser.java
// $ANTLR 3.4 C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g 2014-12-02 18:56:28

  package com.mmpnc.rating.iso.algorithm.dataimport;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class isoalgorithmimportParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENTS", "EXPONENT", "IDENTS", "INTEGER", "MULTI_COMMENT", "STRING", "WS", "','", "':'", "'ARG'", "'ASSIGN'", "'BRACKET'", "'CLASS'", "'CONDITION'", "'ELSE'", "'ERROR'", "'EXPRESSION'", "'FORMATTACHMENT'", "'FUNCTION'", "'IF'", "'LOOP'", "'RATETABLE'", "'RATING'", "'STAT'", "'THEN'", "'program'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int COMMENTS=4;
    public static final int EXPONENT=5;
    public static final int IDENTS=6;
    public static final int INTEGER=7;
    public static final int MULTI_COMMENT=8;
    public static final int STRING=9;
    public static final int WS=10;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public isoalgorithmimportParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public isoalgorithmimportParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return isoalgorithmimportParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g"; }


    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:1: block : ( program | statement | classnode ) ;
    public final isoalgorithmimportParser.block_return block() throws RecognitionException {
        isoalgorithmimportParser.block_return retval = new isoalgorithmimportParser.block_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        isoalgorithmimportParser.program_return program1 =null;

        isoalgorithmimportParser.statement_return statement2 =null;

        isoalgorithmimportParser.classnode_return classnode3 =null;



        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:7: ( ( program | statement | classnode ) )
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:9: ( program | statement | classnode )
            {
            root_0 = (CommonTree)adaptor.nil();


            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:9: ( program | statement | classnode )
            int alt1=3;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt1=1;
                }
                break;
            case 14:
            case 23:
            case 24:
                {
                alt1=2;
                }
                break;
            case 16:
                {
                alt1=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:10: program
                    {
                    pushFollow(FOLLOW_program_in_block61);
                    program1=program();

                    state._fsp--;

                    adaptor.addChild(root_0, program1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:20: statement
                    {
                    pushFollow(FOLLOW_statement_in_block65);
                    statement2=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement2.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:27:32: classnode
                    {
                    pushFollow(FOLLOW_classnode_in_block69);
                    classnode3=classnode();

                    state._fsp--;

                    adaptor.addChild(root_0, classnode3.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class classnode_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classnode"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:29:1: classnode : 'CLASS' ^ '{' ! keyvalues ( childnode )* '}' !;
    public final isoalgorithmimportParser.classnode_return classnode() throws RecognitionException {
        isoalgorithmimportParser.classnode_return retval = new isoalgorithmimportParser.classnode_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal4=null;
        Token char_literal5=null;
        Token char_literal8=null;
        isoalgorithmimportParser.keyvalues_return keyvalues6 =null;

        isoalgorithmimportParser.childnode_return childnode7 =null;


        CommonTree string_literal4_tree=null;
        CommonTree char_literal5_tree=null;
        CommonTree char_literal8_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:29:11: ( 'CLASS' ^ '{' ! keyvalues ( childnode )* '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:29:13: 'CLASS' ^ '{' ! keyvalues ( childnode )* '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal4=(Token)match(input,16,FOLLOW_16_in_classnode78); 
            string_literal4_tree = 
            (CommonTree)adaptor.create(string_literal4)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal4_tree, root_0);


            char_literal5=(Token)match(input,30,FOLLOW_30_in_classnode81); 

            pushFollow(FOLLOW_keyvalues_in_classnode84);
            keyvalues6=keyvalues();

            state._fsp--;

            adaptor.addChild(root_0, keyvalues6.getTree());

            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:29:37: ( childnode )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==16||LA2_0==19||LA2_0==21||(LA2_0 >= 26 && LA2_0 <= 27)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:29:37: childnode
            	    {
            	    pushFollow(FOLLOW_childnode_in_classnode86);
            	    childnode7=childnode();

            	    state._fsp--;

            	    adaptor.addChild(root_0, childnode7.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            char_literal8=(Token)match(input,31,FOLLOW_31_in_classnode89); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classnode"


    public static class childnode_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "childnode"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:1: childnode : ( rating | err | stat | formAttachment | classnode ) ;
    public final isoalgorithmimportParser.childnode_return childnode() throws RecognitionException {
        isoalgorithmimportParser.childnode_return retval = new isoalgorithmimportParser.childnode_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        isoalgorithmimportParser.rating_return rating9 =null;

        isoalgorithmimportParser.err_return err10 =null;

        isoalgorithmimportParser.stat_return stat11 =null;

        isoalgorithmimportParser.formAttachment_return formAttachment12 =null;

        isoalgorithmimportParser.classnode_return classnode13 =null;



        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:11: ( ( rating | err | stat | formAttachment | classnode ) )
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:13: ( rating | err | stat | formAttachment | classnode )
            {
            root_0 = (CommonTree)adaptor.nil();


            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:13: ( rating | err | stat | formAttachment | classnode )
            int alt3=5;
            switch ( input.LA(1) ) {
            case 26:
                {
                alt3=1;
                }
                break;
            case 19:
                {
                alt3=2;
                }
                break;
            case 27:
                {
                alt3=3;
                }
                break;
            case 21:
                {
                alt3=4;
                }
                break;
            case 16:
                {
                alt3=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:15: rating
                    {
                    pushFollow(FOLLOW_rating_in_childnode101);
                    rating9=rating();

                    state._fsp--;

                    adaptor.addChild(root_0, rating9.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:24: err
                    {
                    pushFollow(FOLLOW_err_in_childnode105);
                    err10=err();

                    state._fsp--;

                    adaptor.addChild(root_0, err10.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:30: stat
                    {
                    pushFollow(FOLLOW_stat_in_childnode109);
                    stat11=stat();

                    state._fsp--;

                    adaptor.addChild(root_0, stat11.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:37: formAttachment
                    {
                    pushFollow(FOLLOW_formAttachment_in_childnode113);
                    formAttachment12=formAttachment();

                    state._fsp--;

                    adaptor.addChild(root_0, formAttachment12.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:31:54: classnode
                    {
                    pushFollow(FOLLOW_classnode_in_childnode117);
                    classnode13=classnode();

                    state._fsp--;

                    adaptor.addChild(root_0, classnode13.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "childnode"


    public static class rating_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "rating"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:33:1: rating : 'RATING' ^ '{' ! keyvalues '}' !;
    public final isoalgorithmimportParser.rating_return rating() throws RecognitionException {
        isoalgorithmimportParser.rating_return retval = new isoalgorithmimportParser.rating_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal14=null;
        Token char_literal15=null;
        Token char_literal17=null;
        isoalgorithmimportParser.keyvalues_return keyvalues16 =null;


        CommonTree string_literal14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree char_literal17_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:33:8: ( 'RATING' ^ '{' ! keyvalues '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:33:10: 'RATING' ^ '{' ! keyvalues '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal14=(Token)match(input,26,FOLLOW_26_in_rating127); 
            string_literal14_tree = 
            (CommonTree)adaptor.create(string_literal14)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal14_tree, root_0);


            char_literal15=(Token)match(input,30,FOLLOW_30_in_rating130); 

            pushFollow(FOLLOW_keyvalues_in_rating133);
            keyvalues16=keyvalues();

            state._fsp--;

            adaptor.addChild(root_0, keyvalues16.getTree());

            char_literal17=(Token)match(input,31,FOLLOW_31_in_rating135); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "rating"


    public static class err_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "err"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:35:1: err : 'ERROR' ^ '{' ! keyvalues '}' !;
    public final isoalgorithmimportParser.err_return err() throws RecognitionException {
        isoalgorithmimportParser.err_return retval = new isoalgorithmimportParser.err_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal18=null;
        Token char_literal19=null;
        Token char_literal21=null;
        isoalgorithmimportParser.keyvalues_return keyvalues20 =null;


        CommonTree string_literal18_tree=null;
        CommonTree char_literal19_tree=null;
        CommonTree char_literal21_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:35:5: ( 'ERROR' ^ '{' ! keyvalues '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:35:7: 'ERROR' ^ '{' ! keyvalues '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal18=(Token)match(input,19,FOLLOW_19_in_err144); 
            string_literal18_tree = 
            (CommonTree)adaptor.create(string_literal18)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal18_tree, root_0);


            char_literal19=(Token)match(input,30,FOLLOW_30_in_err147); 

            pushFollow(FOLLOW_keyvalues_in_err150);
            keyvalues20=keyvalues();

            state._fsp--;

            adaptor.addChild(root_0, keyvalues20.getTree());

            char_literal21=(Token)match(input,31,FOLLOW_31_in_err152); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "err"


    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:37:1: stat : 'STAT' ^ '{' ! keyvalues '}' !;
    public final isoalgorithmimportParser.stat_return stat() throws RecognitionException {
        isoalgorithmimportParser.stat_return retval = new isoalgorithmimportParser.stat_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal22=null;
        Token char_literal23=null;
        Token char_literal25=null;
        isoalgorithmimportParser.keyvalues_return keyvalues24 =null;


        CommonTree string_literal22_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree char_literal25_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:37:6: ( 'STAT' ^ '{' ! keyvalues '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:37:8: 'STAT' ^ '{' ! keyvalues '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal22=(Token)match(input,27,FOLLOW_27_in_stat161); 
            string_literal22_tree = 
            (CommonTree)adaptor.create(string_literal22)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal22_tree, root_0);


            char_literal23=(Token)match(input,30,FOLLOW_30_in_stat164); 

            pushFollow(FOLLOW_keyvalues_in_stat167);
            keyvalues24=keyvalues();

            state._fsp--;

            adaptor.addChild(root_0, keyvalues24.getTree());

            char_literal25=(Token)match(input,31,FOLLOW_31_in_stat169); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class formAttachment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "formAttachment"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:39:1: formAttachment : 'FORMATTACHMENT' ^ '{' ! keyvalues '}' !;
    public final isoalgorithmimportParser.formAttachment_return formAttachment() throws RecognitionException {
        isoalgorithmimportParser.formAttachment_return retval = new isoalgorithmimportParser.formAttachment_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal26=null;
        Token char_literal27=null;
        Token char_literal29=null;
        isoalgorithmimportParser.keyvalues_return keyvalues28 =null;


        CommonTree string_literal26_tree=null;
        CommonTree char_literal27_tree=null;
        CommonTree char_literal29_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:39:16: ( 'FORMATTACHMENT' ^ '{' ! keyvalues '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:39:18: 'FORMATTACHMENT' ^ '{' ! keyvalues '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal26=(Token)match(input,21,FOLLOW_21_in_formAttachment178); 
            string_literal26_tree = 
            (CommonTree)adaptor.create(string_literal26)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal26_tree, root_0);


            char_literal27=(Token)match(input,30,FOLLOW_30_in_formAttachment181); 

            pushFollow(FOLLOW_keyvalues_in_formAttachment184);
            keyvalues28=keyvalues();

            state._fsp--;

            adaptor.addChild(root_0, keyvalues28.getTree());

            char_literal29=(Token)match(input,31,FOLLOW_31_in_formAttachment186); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "formAttachment"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:1: statement : ( assign | iif | loop ) ;
    public final isoalgorithmimportParser.statement_return statement() throws RecognitionException {
        isoalgorithmimportParser.statement_return retval = new isoalgorithmimportParser.statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        isoalgorithmimportParser.assign_return assign30 =null;

        isoalgorithmimportParser.iif_return iif31 =null;

        isoalgorithmimportParser.loop_return loop32 =null;



        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:11: ( ( assign | iif | loop ) )
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:13: ( assign | iif | loop )
            {
            root_0 = (CommonTree)adaptor.nil();


            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:13: ( assign | iif | loop )
            int alt4=3;
            switch ( input.LA(1) ) {
            case 14:
                {
                alt4=1;
                }
                break;
            case 23:
                {
                alt4=2;
                }
                break;
            case 24:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:15: assign
                    {
                    pushFollow(FOLLOW_assign_in_statement197);
                    assign30=assign();

                    state._fsp--;

                    adaptor.addChild(root_0, assign30.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:24: iif
                    {
                    pushFollow(FOLLOW_iif_in_statement201);
                    iif31=iif();

                    state._fsp--;

                    adaptor.addChild(root_0, iif31.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:41:30: loop
                    {
                    pushFollow(FOLLOW_loop_in_statement205);
                    loop32=loop();

                    state._fsp--;

                    adaptor.addChild(root_0, loop32.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMRatingDataImport\\src\\main\\resources\\com\\mmpnc\\rating\\iso\\algorithm\\dataimport\\isoalgorithmimport.g:43:1: program : 'program' ^ '{' ! keyvalues ( statement )* '}' !;
    public final isoalgorithmimportParser.program_return program() throws RecognitionException {
        isoalgorithmimportParser.program_return retval = new isoalgorithmimportParser.program_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal33=null;
        Token char_literal34=null;
        Token char_literal37=null;
        isoalgorithmimportParser.keyvalues_return keyvalues35 =null;
